Move o a tag p para dentro do balão e move o conjunto para o canto superior direito

--- a/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-2/style.css
+++ b/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-2/style.css
@@ -17,14 +17,22 @@
   
   .baloon {
     position: absolute;
-    top: 500px;
+    top: 100px;
+    left: 250px;
+    z-index: 3;
   
   }
+
+  p {
+    position: absolute;
+    top: 140px;
+    left: 270px;
+    z-index: 4;
+  }
+  
   
   .speach {
     font-size: 25px;
-    position: absolute;
-    top: 800px;
   }
   
   .bowser {
