Move Bowser para o canto inferior direito logo abaixo do balão

--- a/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-2/style.css
+++ b/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-2/style.css
@@ -38,6 +38,8 @@
   .bowser {
     width: 200px;
     position: absolute;
-    top: 700px;
+    top: 300px;
+    left: 500px;
+    z-index: 5;
   }
   
