--- a/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-4/style.css
+++ b/fundamentos/03-introducao-a-html-e-css/03-3-html-css-seletores-e-posicionamento/03-3-exercicio-4/style.css
@@ -1,3 +1,52 @@
 div:hover {
     border: 10px solid black;
 }
+
+div:nth-of-type(1) {
+    background-color: red;
+}
+
+div:nth-of-type(2) {
+    background-color: green;
+}
+
+div:nth-of-type(3) {
+    background-color: orange;
+}
+
+div:nth-of-type(4) {
+    background-color: darkslategray;
+}
+
+div:nth-of-type(5) {
+    background-color: lightgoldenrodyellow;
+}
+
+div:nth-of-type(1) h3 {
+    color: green;
+}
+
+div:nth-of-type(2) h3 {
+    color: red;
+}
+
+div:nth-of-type(3) h3 {
+    color: blue;
+}
+
+div:nth-of-type(4) h3 {
+    color: white;
+}
+
+div:nth-of-type(5) h3 {
+    color: darkgrey;
+}
+
+div:nth-of-type(3) {
+    font-size: 20px;
+}
+
+div:nth-of-type(2n+1) h3 {
+    font-style: italic;
+}
+
